finished up the Unpaid interest and accounted for payment paying interest on that day

--- a/mortgage/views/mortgage.jade
+++ b/mortgage/views/mortgage.jade
@@ -4,8 +4,12 @@ dl
         dl #{mortgage.OrginAmount}
     dt Loan Balance
         dl #{mortgage.Balance}
+    dt Last Payment
+        dl #{mortgage.LastPayment}
     dt Unpaid Interest
         dl #{mortgage.InterestUnpaid}
+    dt Interest Daily
+        dl #{mortgage.InterestDaily}
 
 table
     thead
