--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,5 +2,10 @@
 html
   head
     title= title
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='//html5shim.googlecode.com/svn/trunk/html5.js')
   body!= body
+
+script(src='//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
+script(src='/javascripts/bootstrap.min.js')
