--- a/views/mortgage.jade
+++ b/views/mortgage.jade
@@ -3,8 +3,13 @@ div.navbar.navbar-fixed-top
     div.container
         a.brand(href='#') #{title}
         span.pull-right
-            a.btn.btn-primary(href="https://accounts.google.com/o/oauth2/auth?response_type=token&scope=https://www.googleapis.com/auth/userinfo.profile&redirect_uri=http://mortgage-42.herokuapp.com/&client_id=129675806980.apps.googleusercontent.com") <i class="icon-user icon-white"></i> Login
-            a.btn.btn-primary(href="\?login_with=google") Google
+            if user
+                div.btn-group
+                    a.btn.btn-primary <i class="icon-user icon-white"></i> #{user.username}
+                    a.btn.btn-primary.dropdown-toggle(data-toggle="dropdown", href='/logout')
+                        span.caret
+            else 
+                a.btn.btn-primary(href="/auth/google") Login
 div.container
     div.hero-unit
         h2 Loan Summary
