--- a/views/mortgage.jade
+++ b/views/mortgage.jade
@@ -6,7 +6,7 @@ div.navbar.navbar-fixed-top
             if user != 'undefined'
                 div.btn-group
                     a.btn.btn-primary <i class="icon-user icon-white"></i> #{user.given_name}
-                    a.btn.btn-primary.dropdown-toggle(data-toggle="dropdown")
+                    a.btn.btn-primary.dropdown-toggle(data-toggle="dropdown") &nbsp;
                         span.caret
                     ul.dropdown-menu
                         li
