Fixed some calculations bugs

--- a/views/mortgage.jade
+++ b/views/mortgage.jade
@@ -33,7 +33,7 @@ table.table.table-striped.table-bordered
         th Date
         th.money-label Principal
         th.money-label Interest
-        th.money-label Amount
+        th.money-label Total
     tbody
         - for (var t in mortgage.Transaction)
             tr
