Added tooltips to explain the terms used.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,3 +33,5 @@ html
 
 script(src='//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
 script(src='/javascripts/bootstrap.min.js')
+script(src='/javascripts/bootstrap-tooltip.js')
+script(src='/javascripts/bootstrap-popover.js')
