Added Time Remaining Calculations

--- a/views/mortgage.jade
+++ b/views/mortgage.jade
@@ -14,6 +14,13 @@ div.hero-unit
             dd #{mortgage.Payment}
     dl.row
         span.span4
+            dt.pop(data-content="The annual rate that is charged for borrowing (or made by investing), expressed as a single percentage number that represents the actual yearly cost of funds over the term of a loan. This includes any fees or additional costs associated with the transaction.",data-original-title="Annual Percentage Rate") APR
+            dd #{mortgage.APY} %
+        span.span4
+            dt.pop(data-content="Calculated time till loan is repaid.  Assuming only the standard monthly payments with no additional distributions or payments towards the loan.",data-original-title="Payoff Time") Time Remaining
+            dd #{mortgage.TimeRemaining} Years (#{mortgage.PayoffDate})
+    dl.row
+        span.span4
             dt.pop(data-content="The date the last payment was made.  All payments pay a minimum amount equal to the unpaid interest.",data-original-title="Date of Last Payment") Last Payment
             dd #{mortgage.LastPayment}
         span.span4
